<resources>
    <string name="app_name">App Emi</string>
    <string name="Numeros">Numeros</string>
    <string name="colores">Colores</string>
    <string name="Animales">Animales</string>
    <string name="cuerpo">P. del cuerpo</string>
    <string name="atras">Atras</string>
    <string name="vocales">Vocales</string>
    <string name="Menú">Menú Principal</string>
    <string name="Siguiente">Siguiente</string>

</resources>